fix message z-index

--- a/src/styles/emfe-message/emfe-message.scss
+++ b/src/styles/emfe-message/emfe-message.scss
@@ -31,6 +31,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 99999;
   }
 
   &-text {
